# Bachelor

1_prog_info/lab15/: lab15.cbp  lab15.depend  lab15.layout  main.cpp
1_prog_info/lab16/: lab16.cbp  lab16.depend  lab16.layout  main.cpp
1_prog_info/lab17_arr/: lab17_arr.cbp  lab17_arr.depend  lab17_arr.layout  main.cpp
1_prog_info/lab17_list/: lab17_list.cbp  lab17_list.depend  lab17_list.layout  main.cpp
1_prog_info/lab17_vec/: lab17_vec.cbp  lab17_vec.depend  lab17_vec.layout  main.cpp
1_prog_info/lab188/: lab188.cbp  lab188.depend  lab188.layout  main.cpp
1_prog_info/lab19/: input.txt  lab19.cbp  lab19.depend  lab19.layout  main.cpp
1_prog_info/lab_13/: lab_13.cbp  lab_13.depend  lab_13.layout  main.cpp
1_prog_info/lab_17_queue_list/: lab_17_queue_list.cbp  lab_17_queue_list.layout
2_OOP/OOP_lab_4_1/: OOP_lab_4_1.pro  money.cpp  money.h  payment.cpp  payment.h
2_OOP/oop_lab9/: abon.cpp  abon.h  abonent.cpp  abonent.h  list.cpp  list.h  object.cpp  object.h  oop_lab9.pro  test.cpp
2_OOP/oop_lab_10/: abonent.cpp  abonent.h  abonent2.cpp  abonent2.h  array.cpp  array.h  list.cpp  list.h  oop_lab_10.pro  test.cpp  types.h
2_OOP/oop_lab_11/: array.cpp  array.h  bitstring.cpp  bitstring.h  oop_lab_11.pro  reference.cpp  reference.h  test.cpp  twelve.cpp  twelve.h
2_OOP/oop_lab_12/: array.cpp  array.h  binary.cpp  binary.h  number.cpp  number.h  oop_lab_12.pro  six.cpp  six.h  test.cpp  twelve.cpp  twelve.h
2_OOP/oop_lab_13/: abonent.cpp  abonent.h  abonent2.cpp  abonent2.h  array.h  list.h  main.cpp  oop_lab_13.pro  test.cpp
2_OOP/oop_lab_14/: abonent.cpp  abonent.h  list.cpp  list.h  oop_lab_14.pro  stack.cpp  stack.h  test.cpp  types.h
2_OOP/oop_lab_3/: main.cpp  money.cpp  money.h  oop_lab_3.pro  test.h  unittest.h
2_OOP/oop_lab_3_2/: main.cpp  oop_lab_3_2.pro  test.cpp
2_OOP/oop_lab_4/: main.cpp  oop_lab_4.pro  payment.cpp  payment.h  test.cpp
2_OOP/oop_lab_5/: oop_lab_5.pro  pair.cpp  pair.h  rational.cpp  rational.h  test.cpp
2_OOP/oop_lab_6/: creditmap.cpp  creditmap.h  money.cpp  money.h  (+2 more)
3_Postgres_lab_17/: LICENSE  index.js  package-lock.json  package.json
3_basa_dan/: basa_dan_lab_1.odb  basa_dan_lab_2.odb  basa_dan_lab_3.odb  basa_dan_lab_4.odb  database_lab_8  db_11.sql
4_paral_proz/: aaa.fifo
4_paral_proz/untitled/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
KURS_PARAL/fs_parallel/: CMakeLists.txt  alg.cpp  alg.h  demo.cpp  demo.h  demo.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  show_text.cpp  show_text.h  show_text.ui  theory.cpp  theory.h  theory.ui
SSS-Project-master/: .gitignore  README.md  Устав проекта LMSP.md
kurs 2 semester/: KURS2.cbp  KURS2.depend  KURS2.layout  admin.cpp  admin.h  list.cpp  list.h  main.cpp  print.cpp  print.h  stat.cpp  stat.h  struct.h  test.cpp  test.h  theory.h
psql_backup/: OPTOVIK_backup  asp_net_lab3_backup  asp_net_lab4_backup  egeinformatica_backup  ind_lab_2_backup  ind_lab_3_backup  lab_10_backup  lab_11_backup  lab_12_2_backup  lab_12_3_backup  lab_13_backup  lab_14_backup  lab_15_backup  lab_16_backup  lab_16_optovic_backup  lab_17_backup  lab_4_backup  lab_5_backup  lab_6_backup  lab_7_backup  lab_8_avia_backup  lab_9_avia_backup  session_backup  training_base_backup
(+740 files in other folders)
